implement traffic accounting
